digits framework updated